fix(dialogs): update spacing in components
Closes UXD-1553

--- a/src/tokens/radii.css
+++ b/src/tokens/radii.css
@@ -6,16 +6,16 @@
   --sscds-radii-40: 1rem;
   --sscds-radii-50: 1.5rem;
 
-  --sscds-radii-default: var(--sscds-radii-20);
   --sscds-radii-circle: 100%;
   --sscds-radii-pill: calc(infinity * 1px);
 
+  --sscds-radii-default: var(--sscds-radii-20);
   --sscds-radii-button: var(--sscds-radii-30);
   --sscds-radii-input:  var(--sscds-radii-20);
   --sscds-radii-card:  var(--sscds-radii-30);
-  --sscds-radii-dialog:  var(--sscds-radii-50);
+  --sscds-radii-dialog:  var(--sscds-radii-40);
 
   --sscds-radii-surface-sm:  var(--sscds-radii-20);
   --sscds-radii-surface-md:  var(--sscds-radii-30);
-  --sscds-radii-surface-lg:  var(--sscds-radii-50);
+  --sscds-radii-surface-lg:  var(--sscds-radii-40);
 }
